--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   firebase_core: ^2.3.0
   firebase_auth: ^4.1.5
   cloud_firestore: ^4.1.0
+  firebase_messaging: ^14.1.4
 
 
 dev_dependencies:
