--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   firebase_auth: ^4.1.5
   cloud_firestore: ^4.1.0
   firebase_messaging: ^14.1.4
+  flutter_speed_dial: ^6.2.0
 
 
 dev_dependencies:
