--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   cloud_firestore: ^4.1.0
   firebase_messaging: ^14.1.4
   flutter_speed_dial: ^6.2.0
+  fluttertoast: ^8.1.2
 
 
 dev_dependencies:
