--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,8 +43,9 @@ dependencies:
   cloud_firestore: ^4.1.0
   flutter_speed_dial: ^6.2.0
   fluttertoast: ^8.1.2
-  dropdown_formfield: ^0.1.4
   data_table_2: ^2.3.10
+  numberpicker: ^2.1.1
+  provider: ^6.0.5
 
 
 dev_dependencies:
