--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,16 +37,13 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   shared_preferences: ^2.0.15
-  google_sign_in: ^5.4.2
   firebase_core: ^2.3.0
   firebase_auth: ^4.1.5
   cloud_firestore: ^4.1.0
   flutter_speed_dial: ^6.2.0
   fluttertoast: ^8.1.2
-  data_table_2: ^2.3.10
-  numberpicker: ^2.1.1
-  provider: ^6.0.5
-
+  firebase_crashlytics: ^3.0.9
+dropdown_button2: ^1.9.2
 
 dev_dependencies:
   flutter_test:
