--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_speed_dial: ^6.2.0
   fluttertoast: ^8.1.2
   firebase_crashlytics: ^3.0.9
+  dropdown_textfield: ^1.0.7
 dropdown_button2: ^1.9.2
 
 dev_dependencies:
