--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,9 @@ dependencies:
   firebase_crashlytics: ^3.0.9
   dropdown_textfield: ^1.0.7
 dropdown_button2: ^1.9.2
+  intl: ^0.18.0
+  flutter_bloc: ^7.3.3
+  firebase_database: ^10.0.8
 
 dev_dependencies:
   flutter_test:
