--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,6 @@
 name: dersprogrami
 description: A new Flutter project.
+  Intl.defaultLocale = 'pt_BR';
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -35,19 +36,19 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  shared_preferences: ^2.0.15
-  firebase_core: ^2.3.0
-  firebase_auth: ^4.1.5
-  cloud_firestore: ^4.1.0
-  flutter_speed_dial: ^6.2.0
-  fluttertoast: ^8.1.2
-  firebase_crashlytics: ^3.0.9
-  dropdown_textfield: ^1.0.7
+cupertino_icons: ^1.0.2
+shared_preferences: ^2.0.15
+firebase_core: ^2.4.0
+firebase_auth: ^4.2.1
+cloud_firestore: ^4.2.0
+flutter_speed_dial: ^6.2.0
+fluttertoast: ^8.1.2
+firebase_crashlytics: ^3.0.9
+dropdown_textfield: ^1.0.7
 dropdown_button2: ^1.9.2
-  intl: ^0.18.0
-  flutter_bloc: ^7.3.3
-  firebase_database: ^10.0.8
+intl: ^0.18.0
+flutter_bloc: ^8.1.1
+firebase_database: ^10.0.8
 
 dev_dependencies:
   flutter_test:
@@ -71,10 +72,10 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
- #assets:
+    # To add assets to your application, add an assets section, like this:
+    #assets:
     #- images/images.jpeg
-    #- images/a_dot_ham.jpeg
+  #- images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
