--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,17 +36,17 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-cupertino_icons: ^1.0.2
-shared_preferences: ^2.0.15
-firebase_core: ^2.4.0
-firebase_auth: ^4.2.1
-cloud_firestore: ^4.1.0
-flutter_speed_dial: ^6.2.0
-fluttertoast: ^8.1.2
-firebase_crashlytics: ^3.0.9
-dropdown_textfield: ^1.0.7
+  cupertino_icons: ^1.0.2
+  shared_preferences: ^2.0.15
+  firebase_core: ^2.3.0
+  firebase_auth: ^4.1.5
+  cloud_firestore: ^4.1.0
+  flutter_speed_dial: ^6.2.0
+  fluttertoast: ^8.1.2
+  firebase_crashlytics: ^3.0.9
+  dropdown_textfield: ^1.0.7
 dropdown_button2: ^1.9.2
-
+firebase_database: ^10.0.9
 
 dev_dependencies:
   flutter_test:
